src/Rcm.Web/wwwroot/css/daily.css
.page-entry.daily {
    display: grid;
    grid-template-rows: repeat(3, auto);
    grid-template-columns: auto auto 1fr;
}

.page-entry.daily h2 {
    grid-row: 1;
    grid-column: 1 / 2;

    margin: 0 0 0.5rem 0;
}

.page-entry.daily p {
    margin-top: 0.5rem;
}

.page-entry.daily p.label {
    grid-column: 1;
    margin-right: 3rem;
}

.page-entry.daily p.value {
    grid-column: 2;
    text-align: right;
}

.page-entry.daily p.time {
    grid-row: 2;
}

.page-entry.daily p.temperature {
    grid-row: 3;
}

*[data-presence] {
    margin-top: 2rem;
}

